# scrape-spanish-news

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCH_AUDIT.md  ARCH_REVIEW.md  COMPONENT_MAP.md  DESIGN_TOKENS.md  Makefile  PLAN.md  PROJECT_BRIEF.md  PROJECT_STATE.json  README.md  RESULTS.md  STATUS.md  TASK_CONTRACT.md  TECH_DEBT_AUDIT.md  UI_SPEC.md  compose.yaml  info.txt  mkdocs.yml  pyproject.toml
artifacts/story-matching-eval-iter009-phase2/: pair-artifacts.jsonl
artifacts/story-matching-eval-iter009-phase3/: summary.json
artifacts/story-review-batch-extra/: manifest.json  review-batch.jsonl  review-batch.md
artifacts/story-review-batch-iter009-phase4/: manifest.json  review-batch.jsonl  review-batch.md
docs/: STACK_CONTEXT.md  getting-started.md  index.md  testing-quality.md  web-app-api.md
docs/architecture/: overview.md  (+11 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: __init__.py  analyze_editorial.py  bootstrap_story_gold_set.py  build_matching_corpus.py  build_semantic_map.py  build_story_clusters.py  compare_story_thresholds.py  detect_app_root.sh  enrich_articles.py  evaluate_story_matching.py  generate_comparison_summary.py  init_analysis_schema.py  init_pgvector.py  prepare_story_review_batch.py  replay_editorial_corpus.py  run_explorer_refresh.sh  run_scheduled.sh  run_stories_refresh.sh  semantic_neighbors.py  semantic_project.py  semantic_sync.py  story_cluster_report.py  summarize_story_review_feedback.py
src/: main.py
tests/: fixture_paths.py  test_20minutos_adapter.py  test_abc_adapter.py  test_analysis_entity_mentions.py  test_analysis_pipeline_selection.py  test_analysis_taxonomy.py  test_api_articles.py  test_api_clusters.py  test_api_editorial.py  test_api_semantic_explorer.py  test_comparison_summary_contract.py  test_comparison_summary_warnings.py  test_cross_source_output_metrics_contract.py  test_editorial_analysis_contracts.py  test_editorial_analysis_pipeline.py  test_editorial_normalization.py  test_editorial_replay.py  test_eldiario_adapter.py  test_elmundo_adapter.py  test_elpais_adapter.py  test_entity_canonicalization.py  test_export_article_text.py  test_lavanguardia_adapter.py  test_layered_discovery.py  test_llm_client_usage.py  test_matching_corpus.py  test_models.py  test_openrouter_extraction_contract.py  test_persistence_crud.py  test_registry.py  test_rss_adapter_extraction.py  test_run_traceability.py  test_semantic_analysis.py  test_semantic_build_cli.py  test_semantic_contracts.py  test_semantic_dbstore.py  test_semantic_export.py  test_semantic_neighbors_cli.py  test_semantic_projection.py  test_story_candidate_generation.py  (+6 more)
(+352 files in other folders)
