[project]
name = "spain-news-bias-scraper"
version = "0.1.0"
description = "Root operator surface for the Spain news bias scraper"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0.39,<3.0",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".git",
  ".venv",
  "var",
  "runs/*/.venv",
  "runs/*/data",
  "runs/*/logs",
  "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
